--- a/user-login-ui/src/app/components/welcome/welcome.component.html
+++ b/user-login-ui/src/app/components/welcome/welcome.component.html
@@ -20,7 +20,7 @@
 
   <div id="Profile" class="tabcontent">
     <h3>User Profile</h3>
-    <p>Profile details will be placed here</p>
+    <app-profile></app-profile>
   </div>
 
   <div id="ChangePassword" class="tabcontent">
