Modified package json to use lower version of angular libraryfrom 4.0.0 to 3.4.7, Modified build process for user-login-server to copy resources from user-login-ui, removed vertical border appearing left side of form once ng-valid is true.

--- a/user-login-ui/src/styles.css
+++ b/user-login-ui/src/styles.css
@@ -16,9 +16,11 @@
     height: 30px;
 }
 
+/* Shows a vertical grey line for a valid form
 .ng-valid {
-  border-left: 5px solid grey; /* green */
+  border-left: 5px solid grey;
 }
+*/
 
 .ng-valid[required], .ng-valid.required  {
   border-left: 5px solid #42A948; /* green */
